# scraper-news

./: .gitignore  Dockerfile  Dockerfile.app  Dockerfile.base  README.md  archive_docx.py  base_scraper.py  browser_hubeigov.py  browser_hubeigov_year.py  browser_renmin.py  browser_renmin_jp.py  browser_renmin_year.py  compose.yaml  main.py  move_to_stars_folder_api.py  move_to_stars_via_api.py  pyproject.toml  requirements.txt  syno_drive_orgnizer.py  utils_func.py
.github/workflows/: build-app.yml  build-base.yml
config/: config-example.yaml  config.yaml  secret-example.yaml
