[project]
name = "scraper-news"
version = "1.0.0"
description = "scraper news (base 环境)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "paho-mqtt>=2.1.0",
    "playwright>=1.53.0",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "synology-drive-api>=1.0.15",
]
